🍹 start gulping; create logo-pages task

--- a/sandbox/logo-page/logo-page.html
+++ b/sandbox/logo-page/logo-page.html
@@ -18,7 +18,6 @@
   </div>
 
   <div class="logo-page">
-    <h1 class="logo-page__title">Dog profile</h1>
 
     <div class="duo">
       <div class="duo__cell">
@@ -28,6 +27,7 @@
         </div> <!-- logo-lockup -->
       </div>
       <div class="duo__cell">
+        <h1 class="logo-page__title">Dog profile</h1>
         <div class="logo-page__description">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
@@ -58,6 +58,20 @@
 
       </div> <!-- duo-cell -->
     </div> <!-- duo -->
+
+    <div class="duo purchase-well">
+      <div class="duo__cell purchase-well__cell purchase-well__cell--copy">
+        <p>Purchasing this logo you get:</p>
+        <ul>
+          <li>Production-ready asset files in vector formats — .ai, .pdf, .eps — and raster .png. Ready to be used in print, document, web, and video.</li>
+          <li>Exclusive rights to use the logo. No one else will be able to purchase or use the same logo.</li>
+          <li>Variants: One color light background, One color dark background, custom colors.</li>
+        </ul>
+      </div>
+      <div class="duo__cell purchase-well__cell">
+        <button class="purchase-button">Buy Logo $80</button>
+      </div>
+    </div>
 
     <div class="duo">
       <div class="duo__cell">
